  + Features:
    * Project call logs filtering by date (eg. "after:2013-08-01 before:2013-08-05")
    * Upgrade to Rails 3.2.14 - http://weblog.rubyonrails.org/2013/7/23/Rails-3-2-14-has-been-released/

  + Bugs:
    * Restrict and replace space( ), dash(-) to underscore for fusion table name
    * Auto increasement index of fusion table file name

1.0.0 (2013-07-23  Kakada Chheang  <kakada@instedd.org>)

  + Features:
    * Support multiple addresses of contact
    * Add Detect Language step
    * Add Callback step
    * Destroy contact do not delete contact when it has any addresses (API)
    
  + Bugs:
    * fix reminder schedule weekdays repeat